# persistant-knowledge-base-mpc

./: .env  .env.example  README.md  blog.html  claude_desktop_config.json  docker-compose.yml  flow-diagram.html  pyproject.toml
src/knowledge_graph_mcp/: .gitignore  __init__.py  __main__.py  config.py  server.py
src/knowledge_graph_mcp/db/: __init__.py  client.py  embeddings.py
src/knowledge_graph_mcp/tools/: __init__.py  delete.py  profiles.py  prompts.py  query.py  store.py
